[package]
name = "fux_kdtree"
version = "0.2.0"
authors = ["fulara <ntszar@gmail.com>"]
repository = "https://github.com/fulara/kdtree-rust"
keywords = ["tree", "dimension" , "nearest", "search", "neighbor"]
readme = "README.md"
license = "Unlicense"
description = "K-dimensional tree implemented in Rust for fast NN querying."
edition = "2018"

[lib]
name = "kdtree"
path = "src/lib.rs"
bench = false

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
quickcheck = "~0.9"
rand = "~0.7"
bencher = "~0.1"

[dependencies]
num-traits = "0.2"
